# monSmith

backend/: .gitignore  dast_report_test.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/app/api/v1/: auth.py  github.py  scanner.py
backend/app/core/: auth_utils.py
backend/app/db/: db.py  redis.py
backend/app/ml/: ml_engine.py
backend/app/models/: scan_model.py  user_model.py
backend/app/scanner/: .dockerignore  Dockerfile  attack_simulator.py  scanner.py
backend/app/scanner/vulnerability_scan/: graph_engine.py  report_engine.py  vul_scan.py  zombie_scan.py
backend/app/scanner/vulnerability_scan/shell/: data_to_mongodb.py  parser.py  scan.sh
backend/app/schemas/: user_schema.py
backend/app/services/: email_service.py
frontend/: .gitignore  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: DashboardLayout.jsx  Sidebar.jsx  StatCard.jsx  repoChat.jsx
frontend/src/components/landing/: CTASection.jsx  Features.jsx  Footer.jsx  Hero.jsx  Integrations.jsx  Navbar.jsx  ScannerPreview.jsx
frontend/src/context/: authContext.jsx  repoContext.jsx  urlContext.jsx
frontend/src/pages/Auth/: ForgotPassword.jsx  login.jsx  signup.jsx
frontend/src/pages/Dashboard/: Alerts.jsx  Analytics.jsx  Logs.jsx  PageNotFound.jsx  Reports.jsx  Scans.jsx  SecurityHub.jsx  Settings.jsx  UrlMon.jsx  api-endpoints.jsx  apiEndpoints.jsx  code-endpoints.jsx  dashboard.jsx  gitConnect.jsx  newProject.jsx  repo-graph.jsx  repo.jsx
frontend/src/pages/home/: home.jsx
frontend/src/services/: api.js
