[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pymongo",
    "python-dotenv",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "authlib",
    "google-auth",
    "requests",
    "motor",
    "email-validator",
    "sendgrid",
    "langchain",
    "langchain-groq",
    "langchain-core",
    "langchain-community",
    "docker",
    "redis",
]
