[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pymongo",
    "python-dotenv",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "authlib",
    "google-auth",
    "requests",
    "motor",
    "email-validator",
    "sendgrid",
    "langchain",
    "langchain-groq",
    "langchain-core",
    "langchain-community",
    "docker",
    "redis",
    "websockets>=16.0",
    "boto3>=1.42.75",
    "certifi>=2026.2.25",
    "scikit-learn>=1.8.0",
    "pandas>=3.0.1",
    "neo4j>=6.1.0",
    "langchain-neo4j>=0.7.0",
    "langchain-huggingface>=1.2.1",
]
